--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="movie">movie</string>
     <string name="tv_show">tv show</string>
+    <string name="sample_rate">0.0</string>
+    <string name="dot">. . .</string>
+    <string name="size_url_image_list">/w780</string>
 </resources>
