--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="sample_rate">0.0</string>
     <string name="dot">. . .</string>
     <string name="size_url_image_list">/w780</string>
+    <string name="overview">Overview</string>
 </resources>
