--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="dot">. . .</string>
     <string name="size_url_image_list">/w780</string>
     <string name="overview">Overview</string>
+    <string name="my_favorite">My Favorite</string>
 </resources>
