--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="size_url_image_list">/w780</string>
     <string name="overview">Overview</string>
     <string name="my_favorite">My Favorite</string>
+    <string name="title_favorite">Favorite</string>
 </resources>
